# cerebra

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commandline/: add.rs  draw.rs  help.rs  init.rs  intro.rs  last.rs  mod.rs  modify.rs  remove.rs  search.rs
src/database/: code.rs  context.rs  init.rs  mod.rs  note.rs  source.rs  topic.rs
src/tui/: notes.rs
