[package]
name = "cerebra"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
ratatui = "0.29.0"
serde = "1.0.217"
serde_derive = "1.0.217"
clap = { version = "4.5.26", features = ["derive"] }
serde_yaml = "0.9.34"
petgraph = "0.7.1"
crossterm = "0.28.1"
fallible-iterator = "0.3.0"
